# pyasice

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-ci.yml
pyasice/: __init__.py  container.py  exceptions.py  ocsp.py  signature_verifier.py  tsa.py  utils.py  xmlsig.py
pyasice/templates/: signature.xml
pyasice/tests/: conftest.py  test_container.py  test_ocsp.py  test_signature_verifier.py  test_tsa.py  test_utils.py  test_xml_signature.py
pyasice/tests/certificates/: ecdsa.pem  rsa.pem
pyasice/tests/files/: signed-test-mobileid-ee.asice
