[tool.poetry]
name = "pyasice"
version = "1.0.3"
description = "Manipulate ASiC-E containers and XAdES/eIDAS signatures for Estonian e-identity services"
readme = "README.md"
license = "ISC"
authors = [
    "Thorgate <info@thorgate.eu>",
    "Yuri Shatrov <yuriy@thorgate.eu>",
]
maintainers = [
    "Jyrno Ader <jyrno42@gmail.com>",
    "Jorgen Ader <jorgen.ader@gmail.com>",
]
repository = "https://github.com/thorgate/pyasice"
homepage = "https://github.com/thorgate/pyasice"
keywords=[
    "esteid",
    "asice",
    "smartid",
    "mobile-id",
    "idcard"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "pyasice" },
]
include = [
    "pyasice/templates/*.xml"
]
exclude = [
    "pyasice/__pycache__",
    "pyasice/tests",
]


[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

lxml = ">=4,<5"
oscrypto = "*"
asn1crypto = "*"
cryptography = ">=3,<4"
requests = ">=2.20"

[tool.poetry.dev-dependencies]
pytest = "6.*"
coverage = "5.*"
coveralls = "2.*"
pytest-cov = ">=2.8.1"
flake8 = "3.8.*"
black = "20.8b1"
isort = "5.6.*"


[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.?venv.*
    | _build
    | build
    | dist
    | docs
  )/
)
'''

[tool.isort]
skip_glob = "venv*,.venv*,migrations"
line_length = '120'
atomic = 'true'
multi_line_output = '3'
include_trailing_comma = 'true'
use_parentheses = 'true'
force_grid_wrap = '0'
known_pytest = "pytest"
known_first_party = "pyasice"
lines_between_types = '0'
sections = "FUTURE,STDLIB,PYTEST,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = '2'
force_alphabetical_sort_within_sections = '1'

[tool.coverage.run]
branch = true
omit = ["*test*"]